# reswirl

./: .gitignore  .pre-commit-config.yaml  OLDREADME.md  PRD.md  README.md  pyproject.toml
src/reswirl/: cli.py  convert.py  inventory.py
